linked js file to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="container"></div>
-    <link rel="javascript" href="javascript.js">
+    <script src="javascript.js"></script>
 </body>
 </html>
