--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div id ="title"><h1>Etch-a-Sketch</h1></div>
     <div id="container"></div>
     <script src="javascript.js"></script>
 </body>
